minor+doc: mobile-nav; smooth-scrolling

--- a/index.html
+++ b/index.html
@@ -43,14 +43,12 @@
 			<div class="Noise" id="Noise"></div>
 			<div class="Socials">
 				<ul>
-					<li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li>
-					<li><a href="#" target="_blank"><i class="fa fa-spotify"></i></a></li>
-					<li><a href="#" target="_blank"><i class="fa fa-pinterest"></i></a></li>
+					<li><a href="https://github.com/Recyclero" target="_blank"><i class="fa fa-github"></i></a></li>
+					<li><a href="https://twitter.com/Recyclero" target="_blank"><i class="fa fa-twitter"></i></a></li>
+					<!-- <li><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li> -->
 				</ul>
 			</div>
-			<div class="CountdownWrapper"><div id="Countdown" class="Countdown" data-moment="1624936854" data-layout="<strong>We are going live in</strong><br />{d<}{dn} {dl} and {d>}{hn} {hl},<br /> {mn} {ml}, {sn} {sl}"></div></div>
+			<div class="CountdownWrapper"><div id="Countdown" class="Countdown" data-moment="1625004213" data-layout="<strong>We are going live in</strong><br />{d<}{dn} {dl} and {d>}{hn} {hl},<br /> {mn} {ml}, {sn} {sl}"></div></div>
 			<div class="Corners">
 				<span></span>
 				<span></span>
@@ -141,8 +139,7 @@
 			
 		</div>
 		
-        <script src="../../../ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="_3rdparty/jquery-2.2.4.min.js"><\/script>')</script>
+        <script src="_3rdparty/jquery-2.2.4.min.js"></script>
 		<script src="_3rdparty/jquery.plugin.min.js"></script>
 		<script src="_3rdparty/jquery.countdown.min.js"></script>
 		<script src="_3rdparty/three.js/three.min.js"></script>
