minor: SEO; g-analytics; re-structure

--- a/index.html
+++ b/index.html
@@ -1,19 +1,43 @@
 <!doctype html>
 <html class="no-js" lang="">
-<head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Recyclero: Transforming and eradicating waste</title>
-        <meta name="description" content="Solving waste disposal and recycling. Innovation pushing the boundaries of waste management and sustainable engineering.">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+	<head>
+			<meta charset="utf-8">
+			<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+			<title>Recyclero: Transforming and eradicating waste</title>
+			<meta name="description" content="Solving waste disposal and recycling. Innovation pushing the boundaries of waste management and sustainable engineering.">
+			<meta name="viewport" content="width=device-width, initial-scale=1">
+			<meta content="Solving waste disposal and recycling. Innovation pushing the boundaries of waste management and sustainable engineering." name="description"/>
+			<meta content="Solving waste disposal and recycling. Innovation pushing the boundaries of waste management and sustainable engineering." property="og:title"/>
+			<meta content="Solving waste disposal and recycling. Innovation pushing the boundaries of waste management and sustainable engineering." property="og:description"/>
+			<meta content="https://recyclero.com/assets/images/banner.png" property="og:image"/>
+			<meta name="msapplication-TileColor" content="#2263a6">
+			<meta name="theme-color" content="#2263a6">
+			<meta name="keywords" content="Sientifico, Science, Engineering, STEM, Innovation, India" />
+			<meta property="og:type" content="website" />
+			<meta property="og:url" content="https://recyclero.com/" />
+			<meta name="theme-color" content="#2263a6">
+			<meta name="twitter:card" content="summary_large_image">
+			<meta name="twitter:site" content="@therecyclero" />
+			<meta name="twitter:creator" content="@therecyclero" />
+			<meta name="twitter:title" content="Solving waste disposal and recycling. Innovation pushing the boundaries of waste management and sustainable engineering.">
+			<meta name="twitter:description" content="Solving waste disposal and recycling. Innovation pushing the boundaries of waste management and sustainable engineering.">
+			<meta name="twitter:image" content="https://recyclero.com/assets/images/banner.png">
+			<link rel="apple-touch-icon" href="apple-touch-icon.png">
+			<link type="text/css" rel="stylesheet" href="_3rdparty/normalize.css">
+			<link type="text/css" rel="stylesheet" href="_3rdparty/font-awesome-4.5.0/css/font-awesome.css">
+			<link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700">
+			<link type="text/css" rel="stylesheet" href="/static/css/main.css">
+			<!-- Global site tag (gtag.js) - Google Analytics -->
+			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154864356-6"></script>
+			<script>
+			  window.dataLayer = window.dataLayer || [];
+			  function gtag(){dataLayer.push(arguments);}
+			  gtag('js', new Date());
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link type="text/css" rel="stylesheet" href="_3rdparty/normalize.css">
-        <link type="text/css" rel="stylesheet" href="_3rdparty/font-awesome-4.5.0/css/font-awesome.css">
-		<link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700">
-        <link type="text/css" rel="stylesheet" href="main.css">
-    </head>
-    <body>	
+			  gtag('config', 'UA-154864356-6');
+			</script>
+	</head>
+	<body>
 		<div class="EarthSection" id="EarthSection">
 			<div class="BackgroundPics" id="BackgroundPics" data-interval="5000">
 			</div>
@@ -37,8 +61,8 @@
 					<li><span></span><div><div><span data-section="#Section-Notify">Updates</span></div></div></li>
 				</ul>
 			</nav>
-			<img src="_pics/recyclero-white.png" class="Logo" alt="" />
-			<img src="_pics/recyclero.png" class="OverlayLogo" id="OverlayLogo" alt="" />
+			<img src="/static/images/recyclero-white.png" class="Logo" alt="" />
+			<img src="/static/images/recyclero.png" class="OverlayLogo" id="OverlayLogo" alt="" />
 			<div class="Earth" id="Earth"></div>
 			<div class="Noise" id="Noise"></div>
 			<div class="Socials">
@@ -139,7 +163,7 @@
 			
 		</div>
 		
-        <script src="_3rdparty/jquery-2.2.4.min.js"></script>
+		<script src="_3rdparty/jquery-2.2.4.min.js"></script>
 		<script src="_3rdparty/jquery.plugin.min.js"></script>
 		<script src="_3rdparty/jquery.countdown.min.js"></script>
 		<script src="_3rdparty/three.js/three.min.js"></script>
@@ -149,6 +173,6 @@
 		<script src="_3rdparty/three.js/OBJLoader.js"></script>
 
 		<script src="_3rdparty/three.js/Detector.js"></script>
-		<script src="main.js"></script>
-    </body>
+		<script src="/static/js/main.js"></script>
+	</body>
 </html>
