--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 			<meta charset="utf-8">
 			<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 			<title>Recyclero: Transforming and eradicating waste</title>
-			<meta name="description" content="Solving waste disposal and recycling. Innovation pushing the boundaries of waste management and sustainable engineering.">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<meta content="Solving waste disposal and recycling. Innovation pushing the boundaries of waste management and sustainable engineering." name="description"/>
 			<meta content="Solving waste disposal and recycling. Innovation pushing the boundaries of waste management and sustainable engineering." property="og:title"/>
@@ -12,7 +11,7 @@
 			<meta content="https://recyclero.com/assets/images/banner.png" property="og:image"/>
 			<meta name="msapplication-TileColor" content="#2263a6">
 			<meta name="theme-color" content="#2263a6">
-			<meta name="keywords" content="Sientifico, Science, Engineering, STEM, Innovation, India" />
+			<meta name="keywords" content="Recyclero, Waste Disposal, Engineering, Recycling, Innovation, India" />
 			<meta property="og:type" content="website" />
 			<meta property="og:url" content="https://recyclero.com/" />
 			<meta name="theme-color" content="#2263a6">
