minor: favicon assets, tags

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 			<meta content="Solving waste disposal and recycling. Innovation pushing the boundaries of waste management and sustainable engineering." name="description"/>
 			<meta content="Solving waste disposal and recycling. Innovation pushing the boundaries of waste management and sustainable engineering." property="og:title"/>
 			<meta content="Solving waste disposal and recycling. Innovation pushing the boundaries of waste management and sustainable engineering." property="og:description"/>
+			<link rel="apple-touch-icon" sizes="180x180" href="/static/images/icons/apple-touch-icon.png">
+			<link rel="icon" type="image/png" sizes="32x32" href="/static/images/icons/favicon-32x32.png">
+			<link rel="icon" type="image/png" sizes="16x16" href="/static/images/icons/favicon-16x16.png">
+			<link rel="manifest" href="/static/images/icons/site.webmanifest">
 			<meta content="https://recyclero.com/assets/images/banner.png" property="og:image"/>
+			<meta property="og:image:width" content="1280">
+			<meta property="og:image:height" content="720">
 			<meta name="msapplication-TileColor" content="#2263a6">
 			<meta name="theme-color" content="#2263a6">
 			<meta name="keywords" content="Recyclero, Waste Disposal, Engineering, Recycling, Innovation, India" />
