--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<link rel="icon" type="image/png" sizes="32x32" href="/static/images/icons/favicon-32x32.png">
 			<link rel="icon" type="image/png" sizes="16x16" href="/static/images/icons/favicon-16x16.png">
 			<link rel="manifest" href="/static/images/icons/site.webmanifest">
-			<meta content="https://recyclero.com/assets/images/banner.png" property="og:image"/>
+			<meta content="https://recyclero.com/static/images/banner.png" property="og:image"/>
 			<meta property="og:image:width" content="1280">
 			<meta property="og:image:height" content="720">
 			<meta name="msapplication-TileColor" content="#2263a6">
@@ -26,8 +26,7 @@
 			<meta name="twitter:creator" content="@therecyclero" />
 			<meta name="twitter:title" content="Solving waste disposal and recycling. Innovation pushing the boundaries of waste management and sustainable engineering.">
 			<meta name="twitter:description" content="Solving waste disposal and recycling. Innovation pushing the boundaries of waste management and sustainable engineering.">
-			<meta name="twitter:image" content="https://recyclero.com/assets/images/banner.png">
-			<link rel="apple-touch-icon" href="apple-touch-icon.png">
+			<meta name="twitter:image" content="https://recyclero.com/static/images/banner.png">
 			<link type="text/css" rel="stylesheet" href="_3rdparty/normalize.css">
 			<link type="text/css" rel="stylesheet" href="_3rdparty/font-awesome-4.5.0/css/font-awesome.css">
 			<link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700">
@@ -73,7 +72,7 @@
 			<div class="Socials">
 				<ul>
 					<li><a href="https://github.com/Recyclero" target="_blank"><i class="fa fa-github"></i></a></li>
-					<li><a href="https://twitter.com/Recyclero" target="_blank"><i class="fa fa-twitter"></i></a></li>
+					<li><a href="https://twitter.com/therecyclero" target="_blank"><i class="fa fa-twitter"></i></a></li>
 					<!-- <li><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li> -->
 				</ul>
 			</div>
@@ -137,7 +136,7 @@
 					<div class="SectionContent">
 						<div>
 							<p><strong>Get notified when we're online!</strong></p>
-							<form method="POST" class="SubscribeForm" id="SubscribeForm" action="http://demos.boomapps.eu/earthie/earthie_dark/subscribe.php">
+							<form method="POST" class="SubscribeForm" id="SubscribeForm" action="https://p7p3tevbu6.execute-api.ap-south-1.amazonaws.com/Prod/submitForm">
 								<input type="text" name="Email" id="SubscribeFormEmail" placeholder="Enter your email address" autocomplete="off" /><br />
 								<a href="#" class="NiceLink" id="SubscribeSubmit">Subscribe</a>
 							</form>							
