minor: updates/subscribe copy

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<div class="Noise" id="Noise"></div>
 			<div class="Socials">
 				<ul>
-					<li><a href="https://github.com/Recyclero" target="_blank"><i class="fa fa-github"></i></a></li>
+					<li><a href="https://github.com/recyclero" target="_blank"><i class="fa fa-github"></i></a></li>
 					<li><a href="https://twitter.com/therecyclero" target="_blank"><i class="fa fa-twitter"></i></a></li>
 					<!-- <li><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li> -->
 				</ul>
@@ -135,7 +135,7 @@
 					<h2>Updates</h2>
 					<div class="SectionContent">
 						<div>
-							<p><strong>Get notified when we're online!</strong></p>
+							<p><strong>We are a fast-paced company, continually improving on our technology. We look forward to sharing more of our progress in the future. Subscribe to our monthly newsletter!</strong></p>
 							<form method="POST" class="SubscribeForm" id="SubscribeForm" action="https://p7p3tevbu6.execute-api.ap-south-1.amazonaws.com/Prod/submitForm">
 								<input type="text" name="Email" id="SubscribeFormEmail" placeholder="Enter your email address" autocomplete="off" /><br />
 								<a href="#" class="NiceLink" id="SubscribeSubmit">Subscribe</a>
